fix picture section mobile
fixed picture section to work on mobile. Switched for background-img
instead of having the img in the html.

--- a/styles.less
+++ b/styles.less
@@ -42,6 +42,7 @@ header{
 
 		ul {
 			text-align: center;
+			padding: 0;
 			li{
 				display: inline;
 				margin-right: 30px;
@@ -78,7 +79,7 @@ section#intro{
 		margin: 0 auto;
 		margin-bottom: 100px;
 		text-align: center;
-		width: 80%;
+		width: 100%;
 		@media only screen and (min-width: 900px) {
 			font-size: 60px;
 			width: 60%;
@@ -87,25 +88,37 @@ section#intro{
 				font-size: 30px;
 				margin-bottom: -22px;
 			}
-		#changer {
-		    color:@blue;
-		}
 	}
 }
 
 section#picture{
+	width: 100%;
+	height: 600px;
+	@media only screen and (min-width: 900px) {
+		height: 800px;
+	}
 	.pic{
-		width: 200%;
-		margin-left: -50%;
-		margin-top: -6em;
+		width: 100%;
+		height: 600px;
+		background: url("images/background.png") no-repeat;
+		background-size: cover;
+		background-position-x: -400px;
+		@media only screen and (min-width: 500px) {
+			height: 600px;
+			background-position-x:-200px;
+		}
 		@media only screen and (min-width: 900px) {
-			width: 100%;
-			margin: 0 auto;
+			height: 720px;
+			background-position-x:0;
 		}
-		@media only screen and (min-width: 1800px) {
-			width: 80%;
-			margin: 0 auto;
-		}
+		// @media only screen and (min-width: 900px) {
+		// 	width: 100%;
+		// 	margin: 0 auto;
+		// }
+		// @media only screen and (min-width: 1800px) {
+		// 	width: 80%;
+		// 	margin: 0 auto;
+		// }
 	}
 }
 
